# jd

./: .gitignore  README.md  meson.build
Documentation/: jd-config.1.in  jd-ls.1.in  jd.1.in  jd.conf.5.in  jdfs-config.1.in  jdfs-ls.1.in  jdfs-path.1.in  jdfs.1.in  jdfs.conf.5.in  meson.build
configuration-files/: mesonconf.h.in
doc/: jd-config.1.in  jd-ls.1.in  jd-path.1.in  jd.1  jd.1.in  jd.conf.5.in  meson.build
include/: configuration.h  jd-cd.h  jd-config.h  jd-ls.h  jd-path.h  jdfs-config.h  jdfs-ls.h  jdfs-path.h  meson.build  optparse.h  path.h  retval.h
src/: configuration.c  jd-cd.c  jd-config.c  jd-ls.c  jd-path.c  jdfs-config.c  jdfs-ls.c  jdfs-path.c  main.c  meson.build  path.c  retval.c
