# Configure documentation files.
configure_file(
  input: 'jdfs.1.in',
  output: 'jdfs.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jdfs-config.1.in',
  output: 'jdfs-config.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jdfs-ls.1.in',
  output: 'jdfs-ls.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jdfs-path.1.in',
  output: 'jdfs-path.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jdfs.conf.5.in',
  output: 'jdfs.conf.5',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man5/'
)
