# Configure documentation files.
configure_file(
  input: 'jd.1.in',
  output: 'jd.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jd-config.1.in',
  output: 'jd-config.1',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man1/'
)

configure_file(
  input: 'jd.conf.5.in',
  output: 'jd.conf.5',
  configuration: conf_data,
  install: true,
  install_dir: get_option('mandir') + '/man5/'
)
